@@ -96,6 +96,7 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2018 MonetDB B.V.
 
   <!-- Run tests -->
   <target name="test">
+    <antcall target="SQLcopyinto" />
     <antcall target="Test_Cautocommit" />
     <!-- <antcall target="Test_Cforkbomb" /> -->
     <antcall target="Test_CisValid" />
@@ -153,6 +154,12 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2018 MonetDB B.V.
 
   <!-- convenience targets for the outside caller to specify which
   test(s) should be run -->
+  <target name="SQLcopyinto">
+    <antcall target="test_class">
+      <param name="test.class" value="SQLcopyinto" />
+    </antcall>
+  </target>
+
   <target name="Test_Cautocommit">
     <antcall target="test_class">
       <param name="test.class" value="Test_Cautocommit" />
