@@ -1,6 +1,9 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Thu Sep 20 2018 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Improved example program SQLcopyinto,java and added to tests directory
+
 * Thu Jun 28 2018 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Corrected return values of DatabaseMetaData methods
   allTablesAreSelectable() and allProceduresAreCallable().
